# odoo-ocr

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  dev.sh  docker-compose.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/v1/: extract.py  health.py  odoo.py  providers.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: extraction.py
backend/app/services/extractors/: azure_docintel.py  base.py  paddle_cpu.py  paddle_vl.py  paddle_vl_worker.py  vertex_gemini.py
backend/app/services/odoo/: client.py
backend/tests/: test_api.py  test_extraction_schema.py  test_odoo_mapper.py  test_vertex_gemini.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: DocumentUploader.vue  ValidationView.vue
frontend/src/composables/: useCommit.ts  useExtract.ts
frontend/src/router/: index.ts
frontend/src/stores/: extraction.ts
frontend/src/types/: extraction.ts
frontend/src/views/: CommittedView.vue  UploadView.vue  ValidateView.vue
infra/aca/: containerapp.yaml
infra/appservice/: appservice.bicep
